replaced headers with divs added menu spacers

--- a/themes/hugo-goa/layouts/partials/menu.html
+++ b/themes/hugo-goa/layouts/partials/menu.html
@@ -28,5 +28,5 @@
     </ul>
   </nav>
   {{ end }}
-  <h4 class="text-center mt-3"><a class="menu-item" href="{{ .Site.BaseURL }}">Home</a></h4>
+  | <a class="menu-item" href="{{ .Site.BaseURL }}">Home</a> |
 </section>
