fix: carousel on ios fix: resume timestamps fix: hugo timezone

--- a/layouts/resume/list.resumehtml.html
+++ b/layouts/resume/list.resumehtml.html
@@ -19,7 +19,7 @@
                 </tr>
             </table>
             <hr>
-            <span id="updated" style="font-size=8pt">Last Updated: {{ now.Format "Monday, January 2, 2006" }}.</span>
+            <span id="updated" style="font-size:8pt">Last Updated: {{ now.Format "Monday, January 2, 2006" }}.</span>
             <br>
             <span id="online" style="font-size=8pt">
     	Visit <a href="{{ $online.base }}">{{ $online.base }}</a> for the most current version, available in{{- " " -}}
